# model-swap-workshop

./: .env.sample  .env.sample.ollama  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  azure.yaml  manual_test.sh  pyproject.toml  save_outputs.sh  solutions.md  workshop.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: azure-dev.yaml  azure-dev.yml  template-validation.yaml
assert_eval/: README.md  __init__.py  travel_planner_eval.yaml  travel_planner_target.py
assert_eval/sample_results/: RESULTS.md
examples/: README.md  agent_trip_planner_langchain.py  agent_trip_planner_maf.py  agent_trip_planner_pydanticai.py  agentframework_agent.py  agentframework_workflow.py  anthropic_messages.py  chat_vision.ipynb  dspy_multi_constraint_optimized.json  dspy_optimize.py  entity_extraction.py  evals_agent.py  evals_basic.py  evals_foundry_judge.py  evals_foundry_project.py  evals_groundedness_data.jsonl  evals_llm_judge.py  extract_github_issue.py  extract_github_repo.py  extract_pdf_receipt.py  extract_webpage.py  function_calling.py  function_calling_code.py  function_calling_loop.py  image_input.py  image_input_messages.py  langchain_agent.py  langgraph_workflow.py  litellm_swap.py  openai_responses.py  pydanticai_agent.py  rag_flow.py  rag_ingested_chunks.json  rag_messages.py  rag_responses.py  single_llm_letter_counting.py  single_llm_multi_constraint.py  single_llm_self_calibration.py  single_llm_spatial_reasoning.py  structured_outputs.py  (+2 more)
infra/: foundry.bicep  main.bicep  main.parameters.json  write_dot_env.ps1  write_dot_env.sh
outputs/agent_trip_planner_langchain/: DeepSeek-V4-Flash.txt  Kimi-K2.6.txt  Mistral-Large-3.txt  gpt-5.5.txt
outputs/agent_trip_planner_maf/: DeepSeek-V4-Flash.txt  Kimi-K2.6.txt  Mistral-Large-3.txt  gpt-5.5.txt
(+116 files in other folders)
