[project]
name = "python-stack-foundry-models"
version = "0.1.0"
description = "Collection of Python examples for AIE talk on picking a stack"
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "openai>=1.109.1",
    "pydantic",
    "pydantic-ai>=1.50.0",
    "python-dotenv",
    "rich",
    "agent-framework-core==1.8.1",
    "agent-framework-openai==1.8.1",
    "langchain",
    "langchain-azure-ai",
    "lunr>=0.8.0",
    "dspy>=3.3.0b1",
]

[tool.uv]
prerelease = "allow"
override-dependencies = ["anthropic>=0.100.0"]

[tool.ruff]
line-length = 120
target-version = "py310"
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["D203"]
